@@ -68,8 +68,12 @@ which is some combination of the following parameters. Enclosing
 part of a profile specification in curly braces { } can be used
 for differential profiles with
 .B opreport
-.
 
+.TP
+.BI "archive:"archive
+Path to the archive to inspect, as generated by
+.B oparchive
+.br
 .TP
 .BI "session:"sessionlist
 A comma-separated list of session names to resolve in. Absence of this
