@@ -1,3 +1,7 @@
+2005-08-31  John Levon  <levon@movementarian.org>
+
+	* doc/oprofile.1.in: document archive: specifier
+
 2005-08-30  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* pp/oparchive_options.cpp: fix #1276058, oparchive must force merging
